    links. Since this needs the just released XML::Feed 0.3, as well 
    as a not yet released XML::RSS, it will fall back to the old method
    if no xml:base info is available.
  * meta: Plugin is now enabled by default since the basewiki uses it.
  * txt: Do not encode quotes when filtering the txt, as that broke
    later parsing of any directives on the page.

 -- Joey Hess <joeyh@debian.org>  Thu, 06 Nov 2008 16:01:00 -0500

ikiwiki (2.68) unstable; urgency=low

  * Add support for checking pushes from untrusted git committers. This can be
    used to set up anonymous git pushes, and other similar things.
  * format: New plugin, allows embedding differently formatted text inside a
    page (ie, otl inside a mdwn page, or syntax highlighted code inside a
    page).
  * relativedate: New javascript-alicious plugin that makes all dates display
    relative, in a very nice way, if I say so myself.
  * Optimise the no-op post-commit hook, to speed up web edits by a fraction
    of a second.
  * git: Allow [[sha1_commit]] to be used in the diffurl, to support cgit.
  * shortcut: Fix display of shortcuts while previewing.
  * Plugins that used to override displaytime should instead override
    formattime. displaytime will call that, and may wrap markup around the
    formatted time.
  * Add an underlay for javascript, and add ikiwiki.js containing some utility
    code.
  * toggle: Stop embedding the full toggle code on each page using it, and
    move it to toggle.js in the javascript underlay.
  * recentchanges: Make feed links point back to anchors on the recentchanges
    page. (JasonBlevins)
  * Fix issue with utf-8 in wikiname breaking session cookies, by
    entity-encoding the wikiname in the session cookie.
  * Use the pure perl Data::Dumper when generating setup files to ensure that
    utf-8 characters are written out as such, and not as the encoded perl
    strings the C Data::Dumper produces.